updated showTutorial